# cp_server

./: .dockerignore  .env  .gitignore  Dockerfile  Dockerfile_app  Dockerfile_celery  Dockerfile_celery_default  LICENSE  README.md  docker-compose.yml  pyproject.toml
cp_server/: __init__.py  celery_task.py  celery_worker.py  config.py  docker_manager.py  env_managment.py  main.py  redis_utils.py  tasks.py  utils.py  watcher_test.py
cp_server/brocker_service/: redis_server.py
cp_server/celery/: celery_server.py  celery_task.py
cp_server/celery_server/: celery_server.py  celery_task.py
cp_server/endpoints/: app_utils.py  mount.py  segment.py
cp_server/fastapi_app/: __init__.py  main.py
cp_server/fastapi_app/endpoints/: __init__.py  file_watcher.py  health.py  logger_bg.py  maintenance.py  mount.py  process_tasks.py  request_models.py  segment.py  utils.py
cp_server/fastapi_app/watcher/: event_handler.py  event_handlers.py  watcher_manager.py  watcher_manager_old.py
cp_server/logger/: __init__.py  base_log.py  celery_log.py  consumer_log.py  fastapi_log.py  fastapi_logger.py  redis_logger.py
cp_server/logging/: __init__.py
cp_server/task_server/: __init__.py  celery_app.py  celery_server.py  celery_task.py  main_task.py  worker_managment.py
cp_server/task_server/tasks/bg_sub/: bg_sub.py
cp_server/task_server/tasks/segementation/: cp_seg.py
cp_server/tasks_server/: __init__.py  celery_app.py  celery_app_utils.py  celery_tasks.py  redis_com.py  utils.py
cp_server/tasks_server/tasks/: celery_main_task.py
cp_server/tasks_server/tasks/bg_sub/: bg_sub.py  bg_sub_task.py
cp_server/tasks_server/tasks/counter/: counter_task_manager.py
cp_server/tasks_server/tasks/saving/: save_arrays.py  save_tasks.py
cp_server/tasks_server/tasks/segementation/: cp_seg copy.py  cp_seg.py  cp_segmentation.py  model_manager.py  seg_task.py
cp_server/tasks_server/tasks/track/: track.py  track_task.py  track_utils.py
cp_server/tasks_server/utils/: redis_com.py  serialization_utils.py
cp_server/utils/: env_managment.py  paths.py
dummy_folder/: dummy.tif
seg_server/: task_2b_deleted.py
seg_server/endpoints/: app_utils.py  mount.py  segment.py
seg_server/task_server/: __init__.py  celery_server.py  celery_task.py  img_process.py
src/cp_server/: __init__.py  cp_server.py  cp_server_fastapi.py  model.py
src/cp_server/endpoints/: health.py  model.py  segment.py  shutdown.py
src/cp_server/utils/: model_utils.py  segment_utils.py
tests/: conftest.py  manualTest.py  pytest.ini  test_bg_sub.py  test_cp_seg.py  test_main.py  test_man_watch.py  test_save_arrays.py
tests/celery/: conftest.py  test_celery_tasks.py  test_ndarray_encoder-decoder.py  test_ndarray_to_bytes.py  test_process_images.py  test_process_images_task.py  test_remove_bg--save_img.py  test_remove_bg_task.py  test_segment--save_masks_task.py  test_segment_task.py  test_track_cells_task.py
tests/cp_server/: test_cp_server_httpx.py  test_cp_server_pytest.py
tests/fastapi/: conftest.py  test_file_watcher_endpoint.py  test_health_endpoint.py  test_process_tasks_endpoint.py  test_segment_endpoint.py  test_segment_watcher_endpoint.py
tests/filewatcher/: test_file_watcher_manager.py  test_filewatcher.py  test_segment_file_handler.py  test_track_file_handler.py
tests/tasks/: test_bg_sub.py  test_cp_seg.py  test_intersection_over_union.py  test_label_overlap.py  test_model_manager.py  test_save_arrays.py  test_stitch_frames.py  test_track_masks.py  test_trim_incomplete_track.py
