[project]
name = "cp-server"
version = "0.1.0"
description = "A FastAPI-based server for running different tasks via Celery in the background. These tasks include running Cellpose on images, removing background and simple masks tracking (iou). The server is equipped with a file watcher to automatically process new images and track subsequent masks."
readme = "README.md"
authors = [
    { name = "Benoit Roux", email = "benoit.roux@gmail.com" },
    { name = "Raphael Feurstein", email = "raphael.feurstein@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "celery>=5.4.0",
    "numpy<2.0.0",
    "redis>=5.2.1",
    "watchdog>=6.0.0",
]

[project.scripts]
cp-server = "cp_server.fastapi_app:main"

[project.optional-dependencies]
celery = [
    "cellpose>=3.1.0",
]
api = [
    "fastapi>=0.115.11",
    "uvicorn>=0.34.0",
]

celery-default = [
    "numba>=0.61.0",
    "scikit-image>=0.25.2",
    "smo>=2.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "cellpose[gui]>=3.1.0",
    "fastapi[all]>=0.115.11",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "scikit-image>=0.25.2",
    "smo>=2.0.2",
]
